# omni-fin

./: .clinerules  .gitignore  .omnifig.yml  Agents.md  Makefile  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md
assets/: asset_parse_prompt.md  ingest_ai_template.md  invest_parse_prompt.md
backend/: pyproject.toml  setup.cfg
backend/omnifin/ai/: structured.py
backend/omnifin/api/: browse.py  ingest.py  invest_parse.py  server.py  tuning.py
backend/omnifin/cli/: assets.py  main.py
backend/omnifin/core/: db.py  errors.py  registry.py
backend/omnifin/db/: schema.sql  seeding.py
backend/omnifin/ingest/: normalize.py
backend/omnifin/models/: __init__.py  categories.py  composites.py  domain.py
backend/omnifin/reconcile/: balance.py
backend/omnifin/tax/: __init__.py  common.py  de.py  us.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_domain.py  test_ingest_api.py  test_invest_parse_api.py  test_normalize.py  test_plan.md  test_seeding.py
config/: app.yml  debug.yml  demo.yml  local.yml  vault.yml
demo/: accounts.yml  assets.yml
docs/: IMPLEMENTATION_ROADMAP.md  SCHEMA_DESIGN.md  cli_quickstart.md  quickstart.md  repo_assessment.md  schemas.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: browse.tsx  invest_parse.tsx  main.tsx  style.css  tuning.tsx
memory-bank/: projectbrief.md
notebooks/: basics.ipynb  init.ipynb  llm.ipynb  query.ipynb  reformat-GENESIS.ipynb  reformat.ipynb  reformat_usb.ipynb  scratch.ipynb  test-database.db  your-database-name.db
notebooks/old/: basics.ipynb  llm.ipynb  reformat.ipynb  reformat_usb.ipynb
omnifin/: __init__.py  building.py  datacls.py  datcls.py  errors.py  excel.py  identification.py  imports.py  managing.py  misc.py  ops.py  parsers.py  parsing.py  records.py  scripts.py  test_db.py  utx.py  validation.py  writing.py
omnifin/ai/: structured.py
omnifin/api/: ingest.py  invest_parse.py  server.py
omnifin/cli/: assets.py  main.py
omnifin/core/: ids.py  registry.py
omnifin/db/: schema.sql  seeding.py
omnifin/models/: __init__.py  categories.py  composites.py
omnifin/novo/: datacls.py  imports.py  loading.py
omnifin/old/: __init__.py  _test_db.py  building.py  datcls.py  identification.py  managing.py  parsing.py  records.py  scripts.py
omnifin/old/parsers/: banks.py  credit.py
omnifin/parsers/: __init__.py  bank_us.py  banks.py  credit.py
omnifin/reconcile/: __init__.py
omnifin/tax/: common.py
tests/: test_browse.py  test_cli.py  test_domain.py  test_ingest_api.py  test_normalize.py  test_plan.md  test_seeding.py
