[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnifin"
version = "0.1.0"
description = "Local-first financial ledger normalization and tax-calculation foundation"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "google-genai>=2.12.1",
  "httpx>=0.28.1",
  "jupyter>=1.1.1",
  "openai>=1.0",
  "pydantic>=2.6",
  "pytest>=9.1.1",
  "python-dotenv>=1.2.2",
  "rich>=13.0",
  "ruff>=0.15.20",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.5"
]

[project.scripts]
fin = "omnifin.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnifin*"]

[tool.setuptools.package-data]
omnifin = ["db/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
