[metadata]
name = omnifin
description = "Omni-fin: Effortlessly Managing Personal Finances"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3.11
version = attr: omnifin.__version__

[options]
packages = find:

[options.extras_require]
test = pytest
