[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnifin"
dynamic = ["version"]
description = "Omni-fin: Effortlessly Managing Personal Finances"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "fastapi",
    "uvicorn",
    "click",
    "pydantic",
    "sqlalchemy",
    "pandas"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
fin = "omnifin.cli:cli"

# This replaces the old `version = attr: omnifin.__version__`
[tool.hatch.version]
path = "omnifin/__init__.py"