[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnifin"
version = "0.1.0"
description = "Local-first financial ledger normalization and tax-calculation foundation"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "httpx>=0.27",
  "openai>=1.0",
  "pydantic>=2.6",
  "uvicorn[standard]>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.5"
]

[project.scripts]
fin = "omnifin.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnifin*"]

[tool.setuptools.package-data]
omnifin = ["db/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
